fixed user img not showing in posts + can click to go to profilePage

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,105 +1,106 @@
-body{
-    font-size: 15pt;
+body {
+	font-size: 15pt;
 }
-#top-container{
-    background-color: none;
-    height: 10em;
-    width: 100%;
-    text-align: center;
-    margin-bottom: -2em;
-}
-
-
-.btn_searchQuery{
-    font-size: 1em;
-    padding: 0.8em;
-    background-color:orangered;
+#top-container {
+	background-color: none;
+	height: 10em;
+	width: 100%;
+	text-align: center;
+	margin-bottom: -2em;
 }
 
-.inp_searchBar{
-    width: 30em;
-    height: 3em;
-    background-color: whitesmoke;
+.btn_searchQuery {
+	font-size: 1em;
+	padding: 0.8em;
+	background-color: orangered;
 }
 
-#logout-btn{
-    font-size: 1em;
-    padding: 0.8em;
-    background-color:orangered;
-    float: left;
-    margin: 2.5em 0em 0em 25em;
+.inp_searchBar {
+	width: 30em;
+	height: 3em;
+	background-color: whitesmoke;
 }
 
-#logo{
-    font-size: 20pt;
-    float: left;
-    margin-top: 10pt;
-    margin-left: 1.5em;
-
+#logout-btn {
+	font-size: 1em;
+	padding: 0.8em;
+	background-color: orangered;
+	float: left;
+	margin: 2.5em 0em 0em 25em;
 }
 
-#search-bar{
-    float: left;
-    margin: 2.5em;
+#logo {
+	font-size: 20pt;
+	float: left;
+	margin-top: 10pt;
+	margin-left: 1.5em;
 }
 
-#highlight{
-    color: orangered;
+#search-bar {
+	float: left;
+	margin: 2.5em;
 }
 
-a { color: inherit; 
-    text-decoration:none
-} 
-
-#left-container{
-    float: left;
-    border-style: none;
-    margin: 0em 10em 0em 5em; 
+#highlight {
+	color: orangered;
 }
 
-#right-container{
-    float:left;
-    border-style: none;
-    height: auto;
+a {
+	color: inherit;
+	text-decoration: none;
 }
 
-.inp_subject{
-    width: 15em;
-    font-size: 15pt;
-    margin-bottom: 1em;
-
+#left-container {
+	float: left;
+	border-style: none;
+	margin: 0em 10em 0em 5em;
 }
 
-.inp_content{
-    width: 15em;
-    font-size: 15pt;
-    margin-bottom: 1em;
-    height: 10em;
+#right-container {
+	float: left;
+	border-style: none;
+	height: auto;
 }
 
-.inp_topic{
-    width: 15em;
-    font-size: 15pt;
-    color: red;
-    border-style: solid;
-    border-color: red;
+.inp_subject {
+	width: 15em;
+	font-size: 15pt;
+	margin-bottom: 1em;
 }
 
-.btn_post{
-    font-size: 15pt;
-    padding: 0.3em;
-    margin: 10pt;
-    background-color:orangered;
-
+.inp_content {
+	width: 15em;
+	font-size: 15pt;
+	margin-bottom: 1em;
+	height: 10em;
 }
 
-.btn_searchTopic{
-    font-size: 15pt;
-    padding: 0.3em;
-    margin: 10pt;
-    background-color:orangered;
+.inp_topic {
+	width: 15em;
+	font-size: 15pt;
+	color: red;
+	border-style: solid;
+	border-color: red;
 }
 
-label{
-    color: orangered;
+.btn_post {
+	font-size: 15pt;
+	padding: 0.3em;
+	margin: 10pt;
+	background-color: orangered;
+}
+
+.btn_searchTopic {
+	font-size: 15pt;
+	padding: 0.3em;
+	margin: 10pt;
+	background-color: orangered;
+}
+
+label {
+	color: orangered;
+}
+
+.userImg {
+	max-width: 5rem;
 }
